fix(Tracker UI): fixed mobile tracker overflow

--- a/public/app/css/_viewToolbar.scss
+++ b/public/app/css/_viewToolbar.scss
@@ -71,6 +71,8 @@
 
 @media screen and (max-width: 400px) {
     #viewToolbar{
+        padding:0 1em;
+        
         .logo{
             margin-bottom:1em;
         }
